More Test comits

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -28,7 +28,7 @@
 
   .card-container-large {
     display: flex;
-    border-color: #b7b7b7;
+    border-color: #cecccc;
     border-style: solid;
     border-width: 2px;
     border-radius: 10px;
