making things pretty-ish

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -111,42 +111,42 @@
           <canvas #chart baseChart
                   [data]="tickerData"
                   [type]="'line'"
-                  [options]="options('#194dbb')">
+                  [options]="options()">
           </canvas>
         </a>
         <a class="chart-card">
           <canvas #chart baseChart
                   [data]="valueData"
                   [type]="'line'"
-                  [options]="options('#367a23')">
+                  [options]="options()">
           </canvas>
         </a>
         <a class="chart-card">
           <canvas #chart baseChart
                   [data]="macData"
                   [type]="'line'"
-                  [options]="options('#be4a1c')">
+                  [options]="options()">
           </canvas>
         </a>
         <a class="chart-card">
           <canvas #chart baseChart
                   [data]="shareData"
                   [type]="'line'"
-                  [options]="options('#4d21d2')">
+                  [options]="options()">
           </canvas>
         </a>
         <a class="chart-card">
           <canvas #chart baseChart
                   [data]="volumeData"
                   [type]="'line'"
-                  [options]="options('#be4a1c')">
+                  [options]="options()">
           </canvas>
         </a>
         <a class="chart-card">
           <canvas #chart baseChart
                   [data]="volumeData"
                   [type]="'line'"
-                  [options]="options('#be4a1c')">
+                  [options]="options()">
           </canvas>
         </a>
         <a class="card" style="width: auto">
