allowing multiple share sells

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -105,7 +105,7 @@
             </mat-select>
           </mat-form-field>
 
-          <button mat-button style="background-color: #64aef8;" (click)="getTickerData()">Select</button>
+          <button mat-button style="background-color: #64aef8;" (click)="startRun()">Select</button>
         </div>
         <a class="chart-card">
           <canvas #chart baseChart
