--- a/src/styles.css
+++ b/src/styles.css
@@ -4,3 +4,64 @@
 html, body { height: 100%; background-color: #808080;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+:host {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 14px;
+  color: #333;
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background-color: #262626;
+}
+
+.content {
+  display: flex;
+  padding: 0 16px;
+  flex-direction: column;
+  align-items: center;
+}
+
+.card-container-large {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  all: unset;
+  height: 40px;
+  color: #efefef;
+  width: 200px;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  line-height: 24px;
+}
+
+.chart-card {
+  all: unset;
+  border-radius: 4px;
+  border: 1px solid #adadad;
+  background-color: #efefef;
+  height: 300px;
+  width: 800px;
+  margin: 0 8px 16px;
+  padding: 16px;
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  transition: all 0.2s ease-in-out;
+  line-height: 24px;
+}
