added a pattern finder for tickers

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,23 +2,34 @@
 <div class="content" role="main">
 
 
-    <mat-expansion-panel style="background-color: #a6a6a6">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Ticker View
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-ticker-data></app-ticker-data>
-    </mat-expansion-panel>
+  <mat-expansion-panel style="background-color: #a6a6a6">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Ticker View
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-ticker-data></app-ticker-data>
+  </mat-expansion-panel>
 
-    <mat-expansion-panel style="background-color: #a6a6a6">
-      <mat-expansion-panel-header>
-        <mat-panel-title>
-          Trader View
-        </mat-panel-title>
-      </mat-expansion-panel-header>
-      <app-trader-data></app-trader-data>
-    </mat-expansion-panel>
+  <mat-expansion-panel style="background-color: #a6a6a6">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Trader View
+      </mat-panel-title>
+    </mat-expansion-panel-header>
+    <app-trader-data></app-trader-data>
+  </mat-expansion-panel>
 
+  <mat-expansion-panel style="background-color: #a6a6a6">
+    <mat-expansion-panel-header>
+      <mat-panel-title>
+        Ticker Pattern View
+      </mat-panel-title>
+      <mat-panel-description>
+        For now use a 1 hour interval on a 1 month period
+      </mat-panel-description>
+    </mat-expansion-panel-header>
+    <app-pattern-data></app-pattern-data>
+  </mat-expansion-panel>
 
 </div>
