--- a/src/app/trader-data/trader-data.component.html
+++ b/src/app/trader-data/trader-data.component.html
@@ -31,7 +31,7 @@
 
       <button mat-button style="background-color: #2d4250; margin-bottom: 15px; margin-left: 20px" (click)="startRun()">Select</button>
     </div>
-    <a class="chart-card">
+    <a class="chart-card" style="width: 90%">
       <canvas #chart baseChart
               [data]="valueData"
               [type]="'line'"
