changing the data fetcher to use alpaca, also changing date inputs for the views

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -16,6 +16,9 @@
       <mat-panel-title>
         Trader View
       </mat-panel-title>
+      <mat-panel-description>
+        This is pretty broke right now sorry
+      </mat-panel-description>
     </mat-expansion-panel-header>
     <app-trader-data></app-trader-data>
   </mat-expansion-panel>
