sorting out data input into a class to keep parameter passing easier

--- a/src/app/pattern-data/pattern-data.component.html
+++ b/src/app/pattern-data/pattern-data.component.html
@@ -38,7 +38,7 @@
       </canvas>
     </a>
     <a class="card" style="width: 80%">
-      <span style="pull-right">{{this.average}}</span>
+      <span>{{this.average}}</span>
     </a>
   </div>
 </div>
