--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~bootstrap/dist/css/bootstrap.min.css';
 @import "~@angular/material/prebuilt-themes/indigo-pink.css";
-html, body { height: 100%; background-color: #808080;
+html, body { height: 100%; background-color: #2d2d2d;
 }
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 
@@ -40,7 +40,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   height: 40px;
   color: #efefef;
   width: 200px;
-  padding: 16px;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -56,8 +55,6 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   background-color: #efefef;
   height: 300px;
   width: 800px;
-  margin: 0 8px 16px;
-  padding: 16px;
   display: flex;
   flex-direction: row;
   justify-content: center;
