--- a/src/app/Components/component-selector/component-selector.component.html
+++ b/src/app/Components/component-selector/component-selector.component.html
@@ -1,4 +1,4 @@
-<h1 mat-dialog-title>Add Chart</h1>
+<h1 mat-dialog-title>Add Component</h1>
 <div mat-dialog-content>
   <p>Component Type</p>
   <mat-form-field appearance="outline" style="color: #efefef">
