--- a/src/app/Components/dashboard-component/dashboard-component.component.html
+++ b/src/app/Components/dashboard-component/dashboard-component.component.html
@@ -9,8 +9,9 @@
 
   <div class="mover" style="background-color: #262626; margin-bottom: 30px" cdkDragHandle>
     <i class="material-icons point"  style="color: #9f9f9f" (click)="deleteMyself()">close</i>
-    <i class="material-icons point"  style="color: #9f9f9f" (click)="toggleVisibility()">visibility</i>
-    <i style="color: #9f9f9f; margin-left: 50px; margin-bottom: 10px">{{this.componentModel.getTitle()}}</i>
+    <i *ngIf="visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility</i>
+    <i *ngIf="!visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility_off</i>
+    <a style="color: #9f9f9f; margin-left: 50px; margin-bottom: 20px">{{this.componentModel.getTitle()}}</a>
     <i class="material-icons float-end point" style="color: #9f9f9f" (click)="openSelector()">add</i>
   </div>
 
