--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,8 @@
 
 <div #container class="content" role="main">
 
-  <i class="material-icons float-end point" style="color: #9f9f9f" (click)="openSelector()">add</i>
+  <button mat-button class="button" style="background-color: #525252; margin-top: 15px;" (click)="openSelector()">
+    <i class="material-icons float-end point" style="color: #9f9f9f">add</i>
+  </button>
 
 </div>
