--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -3,8 +3,19 @@
 }
 
 .point {
-  margin-top: 20px;
   &:hover{
     cursor: pointer;
+  }
+}
+
+.button{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 50px;
+  height: 50px;
+  &:hover{
+    box-shadow: 0px 0px 15px rgba(152, 152, 152, 0.2);
+    transform: translateY(5px);
   }
 }
