--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -18,7 +18,7 @@
   <div [hidden]="!visible" style="height: 90%; width: 100%; padding: 5px">
     <a class="chart-card" style="width: 100%; height: 80%">
       <canvas #chart baseChart
-              [data]="getData()"
+              [data]="this.data"
               [type]="'line'"
               [options]="chartModel.options(currentScale)">
       </canvas>
