adding scrollable charts. also changed resize from drag to click to avoid bugs

--- a/src/app/Components/chart/chart.component.scss
+++ b/src/app/Components/chart/chart.component.scss
@@ -55,3 +55,12 @@
     cursor: pointer;
   }
 }
+
+.chart-card{
+  transition: none;
+}
+
+.myChartWrapper{
+  width: 100%;
+  overflow-x: scroll;
+}
