--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -2,7 +2,7 @@
      [style.width.px]="width"
      [style.height.px]="height"
      [style.transform]="'translate3d('+ left + 'px,' + top + 'px,' + '0px)'"
-     [class.active]="status === 1"
+     [class.active]="resizing"
      (window:mouseup)="setStatus($event, 0)"
      cdkDrag
 >
@@ -17,11 +17,15 @@
 
   <div [hidden]="!visible" style="height: 90%; width: 100%; padding: 5px">
     <a class="chart-card" style="width: 100%; height: 80%">
-      <canvas #chart baseChart
-              [data]="this.data"
-              [type]="'line'"
-              [options]="chartModel.options(currentScale)">
-      </canvas>
+      <div class="myChartWrapper" style="height: 100%">
+        <div class="myChart" (wheel)="onZoom($event)" [style.width.%]="this.chartWidth" style="height: 95%">
+          <canvas #chart baseChart
+                  [data]="this.data"
+                  [type]="'line'"
+                  [options]="chartModel.options(currentScale)">
+          </canvas>
+        </div>
+      </div>
     </a>
 
     <a class="card" *ngIf="this.chartModel.showScale()" style="width: 100%; height: 20%">
@@ -34,5 +38,5 @@
       </mat-button-toggle-group>
     </a>
   </div>
-  <div class="resize-action" (mousedown)="setStatus($event, 1)"></div>
+  <div class="resize-action" (click)="toggleStatus()"></div>
 </div>
