charts are now constrained to their parent

--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -2,12 +2,11 @@
      [style.width.px]="width"
      [style.height.px]="height"
      [style.transform]="'translate3d('+ left + 'px,' + top + 'px,' + '0px)'"
-     [class.active]="resizing"
-     (window:mouseup)="setStatus($event, false)"
-     cdkDrag
+     [class.active]="resizing || moving"
+     (window:mouseup)="setResizeStatus($event, false); setMoveStatus($event, false)"
 >
 
-  <div class="mover" style="background-color: #262626;" cdkDragHandle>
+  <div class="mover" style="background-color: #262626;" (mousedown)="setMoveStatus($event, true)">
     <i class="material-icons point"  style="color: #9f9f9f" (click)="deleteMyself()">close</i>
     <i *ngIf="visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility</i>
     <i *ngIf="!visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility_off</i>
@@ -38,5 +37,5 @@
       </mat-button-toggle-group>
     </a>
   </div>
-  <div class="resize-action" (mousedown)="setStatus($event, true)"></div>
+  <div *ngIf="visible" class="resize-action" (mousedown)="setResizeStatus($event, true)"></div>
 </div>
