--- a/src/app/Components/chart/chart.component.scss
+++ b/src/app/Components/chart/chart.component.scss
@@ -2,6 +2,7 @@
   outline-style: solid;
   border-radius: 10px;
   outline-color: #262626;
+  overflow: hidden;
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
@@ -33,7 +34,7 @@
   top: 100%;
   transform: translate3d(-50%, -50%, 0) rotateZ(45deg);
   border-style: solid;
-  border-width: 8px;
+  border-width: 10px;
   border-color: transparent transparent transparent #e7e7e7;
   &:hover, &:active {
     cursor: nwse-resize;
