--- a/src/app/Components/dashboard-component/dashboard-component.component.scss
+++ b/src/app/Components/dashboard-component/dashboard-component.component.scss
@@ -3,6 +3,7 @@
   border-radius: 10px;
   outline-color: #262626;
   flex-direction: row;
+  overflow: hidden;
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
@@ -34,7 +35,7 @@ span:nth-of-type(3) {
   top: 100%;
   transform: translate3d(-50%, -50%, 0) rotateZ(45deg);
   border-style: solid;
-  border-width: 8px;
+  border-width: 12px;
   border-color: transparent transparent transparent #e7e7e7;
   &:hover, &:active {
     cursor: nwse-resize;
