--- a/src/app/Components/chart/chart.component.scss
+++ b/src/app/Components/chart/chart.component.scss
@@ -4,10 +4,10 @@
   outline-color: #262626;
   overflow: hidden;
   position: absolute;
+  background-color: #2d2d2d;
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
-    background-color: rgba(80, 80, 80, 0.05);
     box-shadow: 0px 3px 15px rgba(152, 152, 152, 0.2);
   }
 
