--- a/src/app/Components/dashboard-component/dashboard-component.component.scss
+++ b/src/app/Components/dashboard-component/dashboard-component.component.scss
@@ -5,10 +5,10 @@
   flex-direction: row;
   overflow: hidden;
   position: absolute;
+  background-color: #2d2d2d;
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
-    background-color: rgba(80, 80, 80, 0.05);
     box-shadow: 0px 3px 15px rgba(152, 152, 152, 0.2);
  }
 
