Fixed bug with the cancel button on the chart selector

--- a/src/app/Components/dashboard-component/dashboard-component.component.html
+++ b/src/app/Components/dashboard-component/dashboard-component.component.html
@@ -4,10 +4,11 @@
      [style.transform]="'translate3d('+ left + 'px,' + top + 'px,' + '0px)'"
      [class.active]="status === 1"
      (window:mouseup)="setStatus($event, 0)"
+     (mousedown)="emitBringToFront()"
      cdkDrag
 >
 
-  <div class="mover" style="background-color: #262626; margin-bottom: 30px" (mousedown)="emitBringToFront()" cdkDragHandle>
+  <div class="mover" style="background-color: #262626; margin-bottom: 30px" cdkDragHandle>
     <i class="material-icons point"  style="color: #9f9f9f" (click)="deleteMyself()">close</i>
     <i *ngIf="visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility</i>
     <i *ngIf="!visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility_off</i>
