charts can now be brought to front

--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -3,6 +3,7 @@
      [style.height.px]="height"
      [style.transform]="'translate3d('+ left + 'px,' + top + 'px,' + '0px)'"
      [class.active]="resizing || moving"
+     (mousedown)="emitBringToFront()"
      (window:mouseup)="setResizeStatus($event, false); setMoveStatus($event, false)"
 >
 
