--- a/src/app/Components/chart/chart.component.scss
+++ b/src/app/Components/chart/chart.component.scss
@@ -5,6 +5,7 @@
   overflow: hidden;
   position: absolute;
   background-color: #2d2d2d;
+  user-select: none;
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
