--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -13,10 +13,11 @@
     <i *ngIf="!visible" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="toggleVisibility()">visibility_off</i>
     <i *ngIf="showPoints" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="togglePoints()">fiber_manual_record</i>
     <i *ngIf="!showPoints" class="material-icons point"  style="color: #9f9f9f; margin-left: 10px" (click)="togglePoints()">adjust</i>
+    <a style="color: #9f9f9f; margin-left: 50px; margin-bottom: 20px">{{this.chartModel.getTitle()}}</a>
   </div>
 
   <div [hidden]="!visible" style="height: 90%; width: 100%; padding: 5px">
-    <a class="chart-card" style="width: 100%;" [style.height.%]="chartHeight">
+    <a class="chart-card" style="width: 100%;" [style.height.px]="getChartHeight()">
       <div class="myChartWrapper" style="height: 100%">
         <div class="myChart" (wheel)="onZoom($event)" [style.width.%]="this.chartWidth" style="height: 95%">
           <canvas #chart baseChart
@@ -28,7 +29,7 @@
       </div>
     </a>
 
-    <a class="card" *ngIf="this.chartModel.showScale()" style="width: 100%; height: 20%">
+    <a class="card" *ngIf="this.chartModel.showScale()" style="width: 100%; height: 50px">
       <mat-button-toggle-group [(value)]="currentScale" name="favoriteColor" aria-label="Favorite Color">
         <mat-button-toggle value="minute">Minute</mat-button-toggle>
         <mat-button-toggle value="hour">Hour</mat-button-toggle>
