--- a/src/app/Components/dashboard-component/dashboard-component.component.html
+++ b/src/app/Components/dashboard-component/dashboard-component.component.html
@@ -18,17 +18,17 @@
 
   <div class="card-container" [hidden]="!this.visible">
     <div class="card" style="width: 100%">
-      <mat-form-field *ngIf="inputs.includes(allInputs.ticker)" appearance="outline" [style.width.px]="inputWidth">
+      <mat-form-field class="no-select" *ngIf="inputs.includes(allInputs.ticker)" appearance="outline" [style.width.px]="inputWidth">
         <mat-label style="color: #efefef">Ticker</mat-label>
-        <input matInput [(ngModel)]="chosenTicker" style="color: #efefef">
+        <input class="no-select" matInput [(ngModel)]="chosenTicker" style="color: #efefef">
       </mat-form-field>
 
-      <mat-form-field *ngIf="inputs.includes(allInputs.interval)"  appearance="outline" [style.width.px]="inputWidth">
+      <mat-form-field class="no-select" *ngIf="inputs.includes(allInputs.interval)"  appearance="outline" [style.width.px]="inputWidth">
         <mat-label style="color: #efefef">Interval</mat-label>
-        <input matInput value="1" type="number" [(ngModel)]="chosenInterval">
+        <input class="no-select" matInput value="1" type="number" [(ngModel)]="chosenInterval">
       </mat-form-field>
 
-      <mat-form-field *ngIf="inputs.includes(allInputs.intervalType)" appearance="outline" style="color: #efefef" [color]="'accent'" [style.width.px]="inputWidth">
+      <mat-form-field class="no-select" *ngIf="inputs.includes(allInputs.intervalType)" appearance="outline" style="color: #efefef" [color]="'accent'" [style.width.px]="inputWidth">
         <mat-select [(value)]="chosenIntervalType" style="color: #efefef">
           <mat-option *ngFor="let interval of intervalTypes" [value]="interval" >
             {{interval.name}}
@@ -36,23 +36,23 @@
         </mat-select>
       </mat-form-field>
 
-      <mat-form-field *ngIf="inputs.includes(allInputs.fromDate)" appearance="outline" [color]="'accent'" [style.width.px]="inputWidth">
+      <mat-form-field class="no-select" *ngIf="inputs.includes(allInputs.fromDate)" appearance="outline" [color]="'accent'" [style.width.px]="inputWidth">
         <mat-label style="color: #efefef">From Date</mat-label>
-        <input matInput [matDatepicker]="picker" [formControl]="fromDate">
+        <input class="no-select" matInput [matDatepicker]="picker" [formControl]="fromDate">
         <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
         <mat-datepicker #picker></mat-datepicker>
       </mat-form-field>
 
-      <mat-form-field *ngIf="inputs.includes(allInputs.toDate)" appearance="outline" [color]="'accent'" [style.width.px]="inputWidth">
+      <mat-form-field class="no-select" *ngIf="inputs.includes(allInputs.toDate)" appearance="outline" [color]="'accent'" [style.width.px]="inputWidth">
         <mat-label style="color: #efefef">To Date</mat-label>
-        <input matInput [matDatepicker]="picker2" [formControl]="toDate">
+        <input class="no-select" matInput [matDatepicker]="picker2" [formControl]="toDate">
         <mat-datepicker-toggle matSuffix [for]="picker2"></mat-datepicker-toggle>
         <mat-datepicker #picker2></mat-datepicker>
       </mat-form-field>
 
-      <mat-form-field *ngIf="inputs.includes(allInputs.startBalance)"  appearance="outline" [style.width.px]="inputWidth">
+      <mat-form-field class="no-select" *ngIf="inputs.includes(allInputs.startBalance)"  appearance="outline" [style.width.px]="inputWidth">
         <mat-label style="color: #efefef">Start Balance</mat-label>
-        <input matInput value="1" type="number" [(ngModel)]="chosenStartBal">
+        <input class="no-select" matInput value="1" type="number" [(ngModel)]="chosenStartBal">
       </mat-form-field>
 
       <button mat-button style="background-color: #2d4250; margin-bottom: 15px;" (click)="getData()" [style.width.px]="inputWidth">Select</button>
