change detection to push on app and component (not sure it even made a difference), added scale for year

--- a/src/app/Components/chart/chart.component.html
+++ b/src/app/Components/chart/chart.component.html
@@ -36,6 +36,7 @@
         <mat-button-toggle value="day">Day</mat-button-toggle>
         <mat-button-toggle value="week">Week</mat-button-toggle>
         <mat-button-toggle value="month">Month</mat-button-toggle>
+        <mat-button-toggle value="year">Year</mat-button-toggle>
       </mat-button-toggle-group>
     </a>
   </div>
