--- a/src/app/Components/chart/chart.component.scss
+++ b/src/app/Components/chart/chart.component.scss
@@ -45,12 +45,15 @@
 
 .mover {
   user-select: none;
+  background-color: #262626;
   &:hover{
     cursor: grab;
   }
+  &.highlight {
+    background-color: #3b3b3b;
+  }
   &:active{
     cursor: grabbing;
-    box-shadow: 0px 0px 15px rgba(152, 152, 152, 0.2);
   }
 }
 
