--- a/src/app/Components/dashboard-component/dashboard-component.component.scss
+++ b/src/app/Components/dashboard-component/dashboard-component.component.scss
@@ -9,25 +9,25 @@
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
-    box-shadow: 0px 3px 15px rgba(152, 152, 152, 0.2);
- }
+    box-shadow: 0px 3px 15px rgba(107, 107, 107, 0.2);
+  }
 
-span:first-of-type {
-  position: absolute;
-  left: 50%;
-  transform: translate3d(-50%, -100%, 0);
-}
+  span:first-of-type {
+    position: absolute;
+    left: 50%;
+    transform: translate3d(-50%, -100%, 0);
+  }
 
-span:nth-of-type(2) {
-  position: absolute;
-  top: 50%;
-  transform: translate3d(-100%, -50%, 0);
-}
+  span:nth-of-type(2) {
+    position: absolute;
+    top: 50%;
+    transform: translate3d(-100%, -50%, 0);
+  }
 
-span:nth-of-type(3) {
-  position: absolute;
-  transform: translate3d(-100%, -100%, 0);
-}
+  span:nth-of-type(3) {
+    position: absolute;
+    transform: translate3d(-100%, -100%, 0);
+  }
 }
 
 .resize-action {
@@ -45,12 +45,15 @@ span:nth-of-type(3) {
 
 .mover {
   user-select: none;
+  background-color: #262626;
   &:hover{
     cursor: grab;
   }
+  &.highlight {
+    background-color: #3b3b3b;
+  }
   &:active{
     cursor: grabbing;
-    box-shadow: 0px 0px 15px rgba(152, 152, 152, 0.2);
   }
 }
 
