--- a/src/app/Components/chart/chart.component.scss
+++ b/src/app/Components/chart/chart.component.scss
@@ -6,11 +6,13 @@
   position: absolute;
   background-color: #2d2d2d;
   user-select: none;
+  /*
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
     box-shadow: 0px 3px 15px rgba(152, 152, 152, 0.2);
   }
+   */
 
   span:first-of-type {
     position: absolute;
@@ -45,12 +47,19 @@
 
 .mover {
   user-select: none;
-  background-color: #262626;
+  padding-left: 8px;
+  padding-top: 10px;
+  background-color: #2d2d2d;
+  border: #2d2d2d;
+  border-bottom: #262626;
+  border-style: solid;
+  transform: translate3d(-8px, -10px, 0);
+  width: 105%;
   &:hover{
     cursor: grab;
   }
   &.highlight {
-    background-color: #3b3b3b;
+    background-color: #262626;
   }
   &:active{
     cursor: grabbing;
