--- a/src/app/Components/dashboard-component/dashboard-component.component.scss
+++ b/src/app/Components/dashboard-component/dashboard-component.component.scss
@@ -3,15 +3,17 @@
   border-radius: 10px;
   outline-color: #262626;
   flex-direction: row;
+  justify-content: center;
   overflow: hidden;
   position: absolute;
   background-color: #2d2d2d;
+  /*
   &.active {
     outline: dashed #262626;
     transform: translateY(-0.25rem);
     box-shadow: 0px 3px 15px rgba(107, 107, 107, 0.2);
   }
-
+   */
   span:first-of-type {
     position: absolute;
     left: 50%;
@@ -45,12 +47,20 @@
 
 .mover {
   user-select: none;
-  background-color: #262626;
+  margin-bottom: 30px;
+  padding-left: 8px;
+  padding-top: 10px;
+  background-color: #2d2d2d;
+  border: #2d2d2d;
+  border-bottom: #262626;
+  border-style: solid;
+  transform: translate3d(-8px, -10px, 0);
+  width: 102%;
   &:hover{
     cursor: grab;
   }
   &.highlight {
-    background-color: #3b3b3b;
+    background-color: #262626;
   }
   &:active{
     cursor: grabbing;
