--- a/src/app/Components/dashboard-component/dashboard-component.component.scss
+++ b/src/app/Components/dashboard-component/dashboard-component.component.scss
@@ -39,7 +39,7 @@
   transform: translate3d(-50%, -50%, 0) rotateZ(45deg);
   border-style: solid;
   border-width: 12px;
-  border-color: transparent transparent transparent #e7e7e7;
+  border-color: transparent transparent transparent #a2a2a2;
   &:hover, &:active {
     cursor: nwse-resize;
   }
